Add engines line

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A Camayak to Medium publishing integration.",
   "main": "index.js",
+  "engines": ">=4.2.0",
   "scripts": {
     "start": "NODE_ENV=development node index.js",
     "start-production": "NODE_ENV=production node index.js",
